<resources>
    <string name="app_name">TuSena</string>
    <string name="comienza_esta_increible_expreriencia_de_la_mano_de_los_mejores">¡Comienza esta increible expreriencia de la mano de los mejores!</string>
    <string name="conoce_cual_es_el_estado_de_tus_proyectos_en_tiempo_real">Conoce cual es el estado de tus proyectos en tiempo real</string>
    <string name="no_olvides_completar_los_formulario_de_entrada_para_que_asi_puedas_ingresar_al_aplicativo">No olvides completar los formulario de entrada para que asi puedas ingresar al aplicativo</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesión_ahora">Inicia sesión ahora</string>
    <string name="login">Login</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="email">Email</string>
    <string name="numero_identificacion">Numero Identificacion</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirmar Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse_ahora">Registrate ahora</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login_here">LOGIN HERE</string>
    <string name="registro_usuario">REGISTRO USUARIO</string>
    <string name="nombre">Nmbres</string>
    <string name="apellido">Apellidos</string>
    <string name="numero_indentificacion">Identificación</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>

    <string name="tr1_p1">¿Ha identificado claramente el problema o necesidad existente que su solución ayudará a resolver?</string>
    <string name="tr1_p2">¿Realizó vigilancia tecnológica para conocer el entorno de la solución propuesta?</string>
    <string name="tr1_p3">¿Existen principios científicos básicos que avalan la solución propuesta?</string>
    <string name="tr1_p4">¿Elaboró el estado del arte sobre el tema en el que se enfoca su solución, revisando fuentes confiables y actuales?</string>
    <string name="tr1_p5">Sabe en términos generales, ¿cómo funcionará y los resultados esperados de la solución propuesta?</string>
    <string name="tr1_p6">¿Sabe qué recursos económicos, financieros, técnicos y de personal requiere para desarrollar su solución?</string>
    <string name="tr1_p7">¿Construyó un documento con  toda la información recopilada en los items anteriores?</string>
    <string name="ingresar_pregunta">INGRESAR PREGUNTA</string>
    <string name="preguntas_de_trl">Preguntas de TRL</string>
    <string name="preguntas">Preguntas</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="agregar_pregunta">AGREGAR PREGUNTA</string>


    <string-array name="estado_civil">

    </string-array>

    <string name="trl2_p1"></string>
    <string name="trl2_p2"></string>
    <string name="trl2_p3"></string>
    <string name="trl2_p4"></string>
    <string name="trl2_p5"></string>
    <string name="trl2_p6"></string>
    <string name="trl2_p7"></string>

    <string name="calculadora_nivel_trl_de_sennova">CALCULADORA NIVEL TRL DE SENNOVA</string>
    <string name="nivel_relativo">Nivel relativo</string>
    <string name="nombre_de_proyecto">Nombre de Proyecto</string>
    <string name="producto">Producto</string>


    <string name="Web">Visita nuestro sitio web y enterate de todo lo que hemos preparado para ti, entra a </string>
    <string name="Web_link">https://Tusena.edu.co </string>
    <string name="investigador">Investigador</string>
    <string name="identificaci_n">Identificación</string>
    <string name="registro_de_investigadores">Registro de Investigadores</string>
    <string name="registro_de_investigadores1">REGISTRO DE INVESTIGADORES</string>
    <string name="tipo_codigo_de_proyecto">tipo Codigo de proyecto</string>
    <string name="n_mero_del_proyecto">Número del proyecto</string>

    <string name="tipo_codigo_de_proyecto_2">Tipo codigo de proyecto</string>

    <string name="trl1">Trl1</string>
    <string name="identificaci_on">Identificación</string>


    <string name="i_1">El termino de Trl (Technological Readiness Level),o Niveles de preparación tecnológica, es una tecnologia que se encarga de medir o calcular en que estado de calidad esta un proyecto o un producto </string>
    <string name="i_2">Estos conceptos son niveles que se usan para saber cual es la calidad de un producto,en total existen 9 niveles, entre mayor el numero es mejor la calidad del producto</string>
    <string name="i_3">El metodo de calificacion de nuestra calculadora es si tu prododucto cumple con TODOS los lineamientos, inmediatamente este producto sube de nivel, en caso de que este producto no cumpla con algunos de los requisitos, el producto quedaria en el nivel que establesido</string>

    <string name="p_1">¿Que es Trl1?</string>
    <string name="p_2">¿Que significa Trl1,Trl2..?</string>
    <string name="p_3">¿Como funciona la calculadora de TuSena?</string>

</resources>