<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/registro_usuario"
        android:textColor="#CC000000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="10dp">

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="361dp"
                android:hint="@string/nombre"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="361dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/apellido" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="359dp"
                android:layout_height="43dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txt_number"
                android:layout_width="363dp"
                android:layout_height="43dp"
                android:ems="10"
                android:hint="@string/numero_indentificacion"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="358dp"
                android:layout_height="43dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/txt_cpassword"
                android:layout_width="358dp"
                android:layout_height="43dp"
                android:ems="10"
                android:hint="@string/confirmar_contrase_a"
                android:inputType="textPassword" />

            <Button
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:id="@+id/btn_registar"
                android:layout_width="176dp"
                android:layout_height="47dp"
                android:text="REGISTRARSE" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya_tienes_cuenta" />
                <TextView
                    android:id="@+id/inicio_ya"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inicia_sesión_ahora"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>