<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Admin">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preguntas_de_trl"
        android:textSize="20sp" />

    <EditText
        android:layout_marginTop="40dp"
        android:id="@+id/edtx_pregtunta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/preguntas"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">


    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
         />
    </RadioGroup>

    <Spinner
        android:id="@+id/sp_trl"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:textAlignment="center"
        android:entries="@array/Trl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/btn_agregarp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_pregunta"
        android:layout_marginTop="20dp"
        />








</LinearLayout>