<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    tools:context=".Manual_trls">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bottom_rounded">

                <ImageView
                    android:layout_width="122dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/tusena_oscuro" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ic_launcher_background"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="Guias y Conceptos"/>
            </LinearLayout>


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/p_1"
    android:textColor="#205072"
    android:textStyle="bold"
    android:textSize="15sp"
    android:layout_marginTop="10dp"
/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/i_1"
                android:background="@drawable/bottom_rounded3"
                android:textColor="@color/ic_launcher_background"
                android:layout_marginEnd="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:text="@string/p_2"
                android:textColor="#205072"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/i_2"
                android:background="@drawable/bottom_rounded2"
                android:textColor="@color/ic_launcher_background"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_3"
                android:textColor="#205072"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/i_3"
                android:background="@drawable/bottom_rounded3"
                android:textColor="@color/ic_launcher_background"
                android:layout_marginEnd="30dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:layout_marginTop="110dp"
            android:background="#205072"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">



                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom"
                    android:backgroundTint="#389c9c"
                    app:icon="@drawable/baseline_home_24"
                    app:iconTint="@color/ic_launcher_background" />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</ScrollView>

